# conde_simulator

./: README.md
alvega/major_control/: CMakeLists.txt  package.xml
alvega/major_crosswalk/: CMakeLists.txt  package.xml
alvega/major_decision/: CMakeLists.txt  package.xml
alvega/major_description/: CMakeLists.txt  package.xml
alvega/major_description/meshes/: camera_elp-usb500w05g-fd100.dae  camera_elp-usb500w05g-fd100.stl
alvega/major_description/urdf/: major.xacro
alvega/major_gazebo/: CMakeLists.txt  package.xml
alvega/major_gazebo/_materials/scripts/: cube.material  floor.material
alvega/major_gazebo/_worlds/: conde_world.world
alvega/major_gazebo/config/: major_ackermann_controller.yaml  major_joint_states.yaml
alvega/major_gazebo/objects/: traffic_sign.sdf
alvega/major_gazebo/scripts/: ackermann_controller
alvega/major_signalling_panel/: CMakeLists.txt  package.xml
alvega/major_tracking/: CMakeLists.txt  package.xml
alvega/major_traffic_sign/: CMakeLists.txt  package.xml
autonomous_driving_world/: CMakeLists.txt  package.xml
autonomous_driving_world/launch/: spawn_competition_track_D1_D2_B1_P1.launch  spawn_competition_track_with_construction_cones.launch  spawn_competition_track_with_obstacles_D3_v1.launch  spawn_competition_track_with_obstacles_and_construction_cones_D4.launch  spawn_competition_track_with_parking_obstacles_B2_v1.launch  spawn_competition_track_with_parking_obstacles_B2_v2.launch  spawn_competition_track_with_parking_obstacles_P2.launch  spawn_competition_track_with_traffic_signs_V1.launch
autonomous_driving_world/objects/: construction_cone.sdf  green_box.sdf  traffic_sign.sdf
autonomous_driving_world/worlds/: competition_track.world
conde_control/: package.xml
conde_decision/: CMakeLists.txt
conde_key_teleop/: package.xml
conde_semaphore/: CMakeLists.txt  package.xml
conde_signalling_panel/: CMakeLists.txt
conde_tracking/: CMakeLists.txt  CMakeLists.txt~
conde_world/: CMakeLists.txt  package.xml
gazebo_semaphore/: CMakeLists.txt
gazebo_signalling_panel_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
gazebo_traffic_sign/: CMakeLists.txt  package.xml
(+96 files in other folders)
